feat: Added ResponseTime fetching for all Hazards